compiler/tests/success/subarrays/x86-64/global_const.jazz
// sub-global with constant index

u32[2] g = {1, 2};

export fn main () -> reg u32 {
  reg ptr u32[1] r;
  reg u32 res;

  r = g[1:1]; // LEA
  res = r[0];

  return res;
}
