compiler/tests/fail/stack_allocation/x86-64/merge_param_global.jazz
u64[2] g = {0,1};

export fn f (reg ptr u64[1] r) -> reg ptr u64[1] {
  reg ptr u64[2] rg;
  rg = g;
  r[0:1] = rg[0:1];
  return r;
}
